jk13 distance fig drafted

--- a/Manuscripts/cog-psych/cogpsych.tex
+++ b/Manuscripts/cog-psych/cogpsych.tex
@@ -201,9 +201,9 @@ In the sections below, we present two experiments demonstrating systematic effec
 
 To begin our investigation, we developed an artificial, two dimensional domain of squares, varying in color and size (see Figure \ref{fig:e1-conditions}, panel A). To foreshadow slightly, effects of contrast are strong and can be widely observed in category generation data. Accordingly, we began by testing the strength of these effects under a variety of learning conditions. This was achieved by training participants on categories possessing qualitatively different distributional structures, as shown in Figure \ref{fig:e1-conditions}. 
 
-\jlanote{Can you make a note here about the counterbalancing we did and what that means about the structures? E.g., Does it mean cluster really is tested in all four quadrants of the currently depicted axes and both rows and columns are tested? I thought that was the case, but I wanted to double check and have you write it in a manner that is definitely what we did.}
-
 Panels B-D of Figure \ref{fig:e1-conditions} show the locations of exemplars belonging to the experimenter-defined categories (`A', or `Alpha') that participants were assigned to learn about prior to generating a new category. In the `Cluster' type, category A is a tight cluster of examples in the space. Perceptually instantiated, the members of category A might, for example, be large and dark in color. In the `Row' type, category A has a row pattern across the space, varying along one feature but not the other. Thus, its members might all be dark in color but would vary in size. Finally, in the `XOR' type, the experimenter-defined category consists of two clusters separated in opposite corners of the space, conforming to the exclusive-or logical structure (e.g., members are small and dark or large and light). 
+
+It should be noted that in our experiments the assignment between the perceptual and conceptual dimensions (e.g., $X \rightarrow Size$, $Y \rightarrow Color$), as well as the direction of variation along each dimension (e.g., $dark \rightarrow light$ or $light \rightarrow dark$) was counterbalanced across participants. The category types in Figure \ref{fig:e1-conditions} are plotted in a conceptual space, rather than a perceptual space: each category type may have a different physical instantiation according to the counterbalance assignment. For example, the Cluster type  may be large and dark in color, or it may be small and light in color, depending on the assignment and direction of the dimensions. For this reason, below we will discuss generation within a conceptual space, rather than a physically instantiated one. Importantly, however, the conceptual organization of the category types remains constant across the counterbalanced assignments.
 
 \begin{figure}
     \begin{center}
@@ -222,15 +222,13 @@ Interestingly, the XOR condition also offers a dissociation between the roles of
 
 \subsection{Participants \& Materials}
 
-183 participants were recruited from Amazon Mechanical Turk. Participants were randomly assigned to one condition: 64 participants were assigned to the Cluster condition, 61 were assigned to the Row condition, and 58 were assigned to the XOR condition. Stimuli were squares varying in color (RGB 25--230) and side length (3.0--5.8cm). These stimuli are slight variants of those used by \cite{conaway2016similar}, see Figure \ref{fig:e1-conditions}. The assignment of perceptual features (color, size) to axes of the domain space (x, y) was counterbalanced across participants.
-
-\jlanote{was the direction of each dimension also counterbalanced (as in Expt 2)?}
+183 participants were recruited from Amazon Mechanical Turk. Participants were randomly assigned to one condition: 64 participants were assigned to the Cluster condition, 61 were assigned to the Row condition, and 58 were assigned to the XOR condition. Stimuli were squares varying in color (RGB 25--230) and side length (3.0--5.8cm). These stimuli are slight variants of those used by \cite{conaway2016similar}, see Figure \ref{fig:e1-conditions}. The assignment of perceptual features (color, size) to axes of the domain space (x, y), as well as the direction of variation along each axis (e.g., $dark \rightarrow light$ or $light \rightarrow dark$) was counterbalanced across participants.
 
 \subsection{Procedure}
 
 Participants began the experiment with a short training phase (3 blocks of 4 trials), where they observed exemplars belonging to the `Alpha' category. Participants were instructed to learn as much as they can about the Alpha category, and that they would answer a series of test questions afterwards. On each trial, a single Alpha category exemplar was presented, and participants were given as much time as they desired before moving on. Each block consisted of a single presentation of each of the members of the Alpha category, in a random order. Participants were shown the range of possible colors and sizes prior to training.
 
-Following the training phase, participants were asked to generate four examples belonging to another category called `Beta'. As in \citet{jern2013probabilistic}, generation was completed using a sliding-scale interface. Two scales controlled the features (color, size) of the generated example. An on-screen preview of the example updated whenever one of the features was changed. Participants could generate any example along an evenly-spaced 9x9 grid, except for any previously generated Beta exemplars. Neither the members of the Alpha category nor the previously generated Beta examples were visible during generation. Prior to beginning the generation phase, participants read the following instructions:
+Following the training phase, participants were asked to generate four examples belonging to another category called `Beta'. As in \citet{jern2013probabilistic}, generation was completed using a sliding-scale interface. Two scales controlled the features (color, size) of the generated example. An on-screen preview of the example updated whenever one of the features was changed. Participants could generate any example along an evenly-spaced 9x9 grid (including members of the Alpha category), except for any previously generated Beta exemplars. Neither the members of the Alpha category nor the previously generated Beta examples were visible during generation. Prior to beginning the generation phase, participants read the following instructions:
 
 \begin{displayquote}
 As it turns out, there is another category of geometric figures called ``Beta''. Instead of showing you examples of the Beta category, we would like to know what you think is likely to be in the Beta category. 
@@ -239,8 +237,7 @@ You will now be given the chance to create examples of any size or color in orde
 
 Each example needs to be unique, but the computer will let you know if you accidentally create a repeat.
 \end{displayquote}
-\jlanote{were they allowed to create another Alpha or did those need to be unique too? we should be clear...}
-%Following generation, participants completed a generalization phase wherein they classified novel examples into the Alpha and Beta categories without feedback. On each trial, a single example was presented, and participants were asked to classify it by clicking buttons labeled ``Alpha'' or ``Beta''. Participants classified a total of 81 items sampled along a 9x9 grid, including the members of the Alpha and Beta categories (randomly intermixed). These data were, however, collected to address a separate set of questions, and we do not discuss them in this paper.
+
 
 \subsection{Results}
 
@@ -274,15 +271,14 @@ Figure \ref{fig:e1-distanceplots} also depicts, for each participant, the averag
 
 The secondary goal of this experiment was to examine whether we replicate the classic result that generated categories often possess the same distributional properties as previously-known categories. For each generated category, we computed the category range along each axis (X, Y), as well as the correlation between features. These data, shown in Figure \ref{fig:e1-statsboxes}, reveal broad individual differences: within each condition, participants generated categories spanning the entire X- and Y- axis as well as categories that spanned very little along each. Likewise, in each condition participants generated categories possessing strongly positive, neutral, and strongly negative correlations between the dimensions. Comparing the distributional statistics between conditions yields a broad-yet-incomplete replication of the classic effect. 
 
-With respect to ranges along each axis (X, Y), the generated categories from each condition tend to reflect the ranges of the experimenter-defined categories. The categories generated in the Cluster condition were less widely distributed along the X-axis compared to Row, $t(123) = 5.61$, $p < 0.001$, and XOR, $t(120) = 2.68$, $p = 0.008$. Likewise, categories generated in the Row condition had less Y-axis range compared to Cluster, $t(123) = 4.57$, $p < 0.001$ and XOR $t(117) = 9.26$, $p < 0.001$, and categories from the Cluster condition had less Y-axis range compared to XOR, $t(120) = 3.95$, $p < 0.001$. However, whereas the correlations in the Cluster and Row conditions were not systematically positive or negative ($ps > 0.1$), the generated categories in the XOR condition tended to possess \textit{negatively} correlated dimensions, $t(57) = 2.04$, $p = 0.046$. This finding is notable, as it is the opposite of what would be expected, assuming learners are emulating the distributional structure of the experimenter-defined class (which possesses perfectly positively correlated features). Further it is expected by our proposal that contrast is a fundamental principle for category generation.
+With respect to ranges along each axis (X, Y), the generated categories from each condition tend to reflect the ranges of the experimenter-defined categories. The categories generated in the Cluster condition were less widely distributed along the X-axis compared to Row, $t(123) = 5.61$, $p < 0.001$, and XOR, $t(120) = 2.68$, $p = 0.008$. Categories generated in the XOR condition were also less widely distributed along the X-axis compared to Row, $t(117) = 2.56$, $p = 0.012$. This latter effect was not expected; however, the key finding is that categories from the Cluster condition tended to be more tightly distributed along the X-axis.
+
+Likewise, categories generated in the Row condition had less Y-axis range compared to Cluster, $t(123) = 4.57$, $p < 0.001$ and XOR, $t(117) = 9.26$, $p < 0.001$, and categories from the Cluster condition had less Y-axis range compared to XOR, $t(120) = 3.95$, $p < 0.001$. However, whereas the correlations in the Cluster and Row conditions were not systematically positive or negative ($ps > 0.1$), the generated categories in the XOR condition tended to possess \textit{negatively} correlated dimensions, $t(57) = 2.04$, $p = 0.046$. This finding is notable, as it is the opposite of what would be expected, assuming learners are emulating the distributional structure of the experimenter-defined class (which possesses perfectly positively correlated features). Further, it is expected by our proposal that contrast is a fundamental principle for category generation.
 
 \begin{figure}
     \begin{center}
     \inputpgf{figs/}{e1-statsboxes.pgf}
-    \caption{Box-plots of the distributional statistics from the categories generated in Experiment 1. }
-    \jlanote{can you add a bit of an explanation of what boxplots are and how to interpret them? (short clearly)}
-    \nbcnote{Weak spot: row has significantly \textit{less} X-range compared to XOR, which I do not know how to explain. For now I've ignored it.}
-  	\jlanote{It's not really a weak spot for us rather that their results don't fully replicate in my opinion.}
+    \caption{Box-plots of the distributional statistics from the categories generated in Experiment 1. Boxes depict the median and quartiles of each condition, with whiskers placed at 1.5 IQR. All points outside this region are marked individually.}
     \label{fig:e1-statsboxes}
     \end{center}
 \end{figure}
@@ -300,7 +296,7 @@ Thus, while the core results of Experiment 1 indicate that generated categories 
 
 \section{Experiment 2}
 
-To test whether category contrast influences the distributional structure of generated categories, we repeated Experiment 1 using two new category types, depicted in Figure \ref{fig:e2-conditions}. The category types possess an identical distributional structure (both are tight clusters of examples with a neutral feature correlation), and only differ slightly in their Y-axis position: the `Bottom' category lies in the bottom-center of the space, and the `Middle' category lies in the center. This distributional equality of these conditions is key to the design of the experiment: if the structure of previously learned categories were the only influence on the structure of generated categories, we should observe no difference between these two conditions with respect to distributional structure.
+To test whether category contrast influences the distributional structure of generated categories, we repeated Experiment 1 using two new category types, depicted in Figure \ref{fig:e2-conditions}. The category types possess an identical distributional structure (both are tight clusters of examples with a neutral feature correlation), and only differ slightly in their Y-axis position: the `Bottom' category lies in the bottom-center of the space, and the `Middle' category lies in the center. The distributional equality of these conditions is key to the design of the experiment: if the structure of previously learned categories were the only influence on the structure of generated categories, we should observe no difference between these two conditions with respect to distributional structure.
 
 \begin{figure}
     \begin{center}
@@ -311,16 +307,11 @@ To test whether category contrast influences the distributional structure of gen
 \end{figure}
 
 
-Alternatively, participants seeking to make a perceptually distinct category would be more likely to distribute members of the generated category into areas that are distant from members of known categories. Thus, if category contrast influences the distributional structure of the categories people generate, then we should observe different types of categories according to the shape of the space that is unoccupied by members of previously learned categories. The difference in the Y-axis position between the Bottom and Middle types produces a considerable change to the shape of the unoccupied space: participants assigned to learn the Bottom category would be less likely to generate exemplars into the lower regions of the stimulus space (as these areas possess greater similarity to members of the Bottom category), preferring instead to distribute exemplars across the upper region of the space. This constraint is lifted in the Middle condition, as the Middle category exemplars are equidistant to the upper and lower regions of the space. Accordingly, participants should be more likely to utilize both of these areas.
-
-
-\nbcnote{Weak point: this prediction is squishy-- why couldn't middle participants generate items above \textit{or} below? When we initially developed this, we were working with the pure-packing variant of PACKER, which is what predicted above-and-below for middle but not bottom. }
-
-\jlanote{they could? wouldn't it depend on the extent that they care about within-category similarity?}
+Alternatively, participants seeking to make a perceptually distinct category would be more likely to distribute members of the generated category into areas that are distant from members of known categories. Thus, if category contrast influences the distributional structure of the categories people generate, then we should observe different types of categories according to the shape of the space that is unoccupied by members of previously learned categories. The difference in the Y-axis position between the Bottom and Middle types produces a considerable change to the shape of the unoccupied space: participants assigned to learn the Bottom category would be less likely to generate exemplars into the lower regions of the stimulus space (as these areas possess greater similarity to members of the Bottom category), preferring instead to distribute exemplars across the upper region of the space. This constraint is lifted in the Middle condition, as the Middle category exemplars are equidistant to the upper and lower regions of the space. Accordingly, participants should be more likely to utilize both of these areas. Thus, to the extent that category contrast influences distributional structure, we should observe more participants in the Middle condition that generate examples above \textit{and} below the experimenter-defined category.
 
 \subsection{Participants, Materials, \& Procedure}
 
-122 participants were recruited from Amazon Mechanical Turk. 61 participants were randomly assigned to the Middle and Bottom conditions each. The stimuli were exactly as in Experiment 1. Again, the assignment of perceptual features (color, size) to axes of the domain space (x, y) was counterbalanced across participants. The procedure was exactly as in Experiment 1: participants first completed a short training phase, followed by the generation phase, followed by the generalization phase (data from this phase is not discussed in this report).
+122 participants were recruited from Amazon Mechanical Turk. 61 participants were randomly assigned to the Middle and Bottom conditions each. The stimuli and procedure were exactly as in Experiment 1: participants first completed a short training phase, followed by the generation phase.
 
 
 \subsection{Results}
@@ -353,6 +344,8 @@ We did, however, observe a notable subgroup of participants in each condition wh
 
 Because the conditions differ only in the Y-axis position of the experimenter-defined category, we then compared the conditions in terms of the frequency with which participants generated examples above and below the categories. Specifically, we counted the number of participants in each condition who placed at least one `Beta' exemplar on the top and bottom `rows' of the space (the maximum and minimum possible y-axis value, respectively). The resulting contingencies data are shown in Table \ref{table:e2-subset-table}. 
 
+\nbcnote{MADE IT HERE}
+
 \begin{table}
 \begin{center} 
 \caption{Experiment 2 results.} 
@@ -379,7 +372,7 @@ Firstly, it should be noted that nearly every participant utilized the top and/o
 
 In Experiment 2, we replicated the core findings from Experiment 1: stimuli are more likely to be generated if they are distant from exemplars in other categories, and most participants generate categories with more between-class than within-class distance. However, we additionally found that the \textit{position} of a previously learned category (rather than its distributional structure) influences the types of categories people generate: participants who learned the `Middle' type were more likely to generate categories spanning the entire Y-axis of the space. Participants who learned the `Bottom' type were less likely to do so, presumably because of the presence of opposite category exemplars in the lower regions of the space.
 
-This finding is cannot be explained under the theoretical perspective that the distributional structure of previously learned categories is the sole determinant of the distributional structure of generated categories. However, the observed performance is sensible under a category contrast perspective: participants seeking to generate a perceptually distinct category will be more likely to use areas of space that are unoccupied by exemplars belonging to previously learned categories. In the Middle condition, the upper and lower regions of space are equidistant from members of the experimenter-defined category, whereas in the Bottom condition, the lower region of the space is closer to members of the experimenter-defined category. Thus, while Middle participants may form categories around the use of the equally unoccupied areas, the same is not true for the Bottom condition.
+This finding cannot be explained under the theoretical perspective that the distributional structure of previously learned categories is the sole determinant of the distributional structure of generated categories. However, the observed performance is sensible under a category contrast perspective: participants seeking to generate a perceptually distinct category will be more likely to use areas of space that are unoccupied by exemplars belonging to previously learned categories. In the Middle condition, the upper and lower regions of space are equidistant from members of the experimenter-defined category, whereas in the Bottom condition, the lower region of the space is closer to members of the experimenter-defined category. Thus, while Middle participants may form categories around the use of the equally unoccupied areas, the same is not true for the Bottom condition.
 
 \section{Model-based Analyses}
 
